--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,211 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Begin - Material UI Breakpoints */
+@media (max-width: 600px) {
+  .App {
+    width: 300px;
+  }
+  .formBox {
+    grid-template-columns: 1fr;
+  }
+  .resultBox {
+    grid-template-columns: 1fr;
   }
 }
+@media (min-width: 601px) {
+  .App {
+    width: 550px;
+  }
+  .formBox {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 900px) {
+  .App {
+    width: 850px;
+  }
+  .formBox {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .resultBox {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (min-width: 1200px) {
+  .App {
+    width: 1150px;
+  }
+  .formBox {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (min-width: 1536px) {
+  .App {
+    width: 1500px;
+  }
+  .formBox {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+/* End - Material UI Breakpoints */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Begin - Form Styles */
+.formBody {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.formBox {
+  display: grid;
+  gap: 0.75rem;
+  width: 100%;
+}
+.form-group {
+  display: flex;
+  flex-direction: column;
+  margin: 0.5rem 0;
+}
+/* End - Form Styles */
+
+/* Begin - App Title */
+.app-title {
+  font-weight: lighter;
+  text-align: center;
+  text-shadow: 0px -2px 1px rgba(150, 150, 150, 1);
+  overflow: hidden;
+}
+.app-title:before,
+.app-title:after {
+  content: "";
+  background-color: #ddd;
+  display: inline-block;
+  height: 1px;
+  position: relative;
+  vertical-align: middle;
+  width: 50%;
+}
+.app-title:before {
+  right: 0.5em;
+  margin-left: -50%;
+}
+.app-title:after {
+  left: 0.5em;
+  margin-right: -50%;
+}
+/* End - App Title */
+
+/* Begin - Submit Button */
+.calculateBtn {
+  width: 50%;
+  padding: 0.5rem 0.75rem;
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
+  font-size: 1.125rem;
+  font-weight: bold;
+  background-color: transparent;
+  transition: all 0.2s ease-out;
+  border-radius: 4px;
+  border: 2px solid #325ea8;
+  margin-top: 0.5rem;
+  color: #ddd;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  cursor: pointer;
+}
+.calculateBtn:hover {
+  background-color: rgba(50, 94, 168, 0.2);
+  box-shadow: rgba(175, 198, 238, 0.5) 0px 6px 12px -2px,
+    rgba(175, 198, 238, 0.5) 0px 3px 7px -3px;
+}
+/* End - Submit Button */
+
+/* Begin - Input Styles */
+.form-group input,
+select {
+  width: 100%;
+  height: 43px;
+  background-color: rgb(201, 213, 234) !important;
+  border: 2px solid #325ea8;
+  border-radius: 4px;
+  padding: 0.5rem 0.75rem;
+  box-shadow: rgba(175, 198, 238, 0.5) 0px 6px 12px -2px,
+    rgba(175, 198, 238, 0.5) 0px 3px 7px -3px;
+  color: black;
+  font-size: 1.25rem;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: all 0.2s ease-out;
+}
+.form-group input:focus,
+select:focus {
+  box-shadow: rgba(175, 198, 238, 1) 0px 13px 27px -5px,
+    rgba(175, 198, 238, 1) 0px 8px 16px -8px;
+  background-color: rgb(238, 241, 245) !important;
+}
+.form-group input:focus-visible {
+  outline: none !important;
+}
+.form-group label {
+  margin-bottom: 0.5rem;
+  letter-spacing: 0.01rem;
+  font-weight: bold;
+}
+/* End - Input Styles */
+
+.resultTable {
+  margin: 1rem 0;
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 4px;
+  border: 1px solid #000;
+  border-radius: 4px;
+}
+.resultTable thead {
+  background-color: #0a326b;
+  color: #fff;
+}
+.resultTable tbody {
+  background-color: #fff;
+  color: #000;
+}
+.resultTable td,
+th {
+  border: 1px solid #000;
+  padding: 0.5rem 0.75rem;
+  text-align: left;
+}
+.resultTable tr:nth-child(even) {
+  background-color: #ddd;
+}
+
+.resultBox {
+  display: grid;
+  gap: 0.75rem;
+  width: 100%;
+  color: #000;
+  font-size: 1.25rem;
+  margin: 1.25rem 0;
+}
+.resultBox div {
+  background-color: white;
+  border-radius: 4px;
+  padding: 0.5rem 0.75rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+.tableBox {
+  overflow-x: auto;
+}
+.showTableBox{
+  display: flex;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.showTableBtn {
+  all: unset;
+  cursor: pointer;
+  margin-bottom: 1.25rem;
+  font-size: 1.125rem;
+  text-align: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.showTableBtn:hover {
+  text-decoration: underline;
 }
