--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
+*,
+::before,
+::after {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  background: rgb(93, 105, 190);
+  background: linear-gradient(
+    135deg,
+    rgba(93, 105, 190, 1) 0%,
+    rgba(200, 159, 235, 1) 100%
+  );
+  color: #ddd;
 }
